--- a/tumblrv1.html
+++ b/tumblrv1.html
@@ -1,5 +1,4 @@
-<html>
-    <head>
+d>
         <title>{Title}</title>
         <link rel="shortcut icon" href="{Favicon}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
@@ -7,47 +6,72 @@
             <meta name="description" content="{MetaDescription}" />
         {/block:Description}
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <style>
             .thebg {
-                background: #36465d;
+                background: #F1F2F1 !important;
+                margin-top:50px !important;
+            }
+            .headerbackground {
+                background: #fff;
+            }
+            .postbg {
+                background: #fff;
+            }
+            h1 h2 h3 h4 { 
+                color:#000;
+                letter-spacing: -2px !important;
+                font-family:'Lato',sans-serif !important;
+                padding:100px 0px;
+            }
+            .getcenter {
+                width: 600px !important;
+                padding: 20px;
+                text-align:center;
+                margin:auto !important;
+            }
+            p {
+                font-family:'Lato',sans-serif !important;
+                color: #616161 !important;
+            }
+            a {
+                font-family:'Lato',sans-serif !important;
+                letter-spacing: -2px !important;
+                color: #444 !important;
+            }
+            .caption {
+                color: #616161 !important;
             }
         </style>
     </head>
     <body class="thebg">
-        <div class="container">
-        <div class="row">
-        <div class="col-xs-6 col-xs-offset-3 text-center">
-        <h1>{Title}</h1>
+        <div class="getcenter headerbackground">
+        <h1 style="letter-spacing: -1px;">{Title}</h1>
         {block:Description}
-            <p id="description">{Description}</p>
+            <p style="letter-spacing: -1px;" id="description">{Description}</p>
         {/block:Description}
-        </div><!-- end col -->
-        </div><!-- end row -->
-        </div><!-- end container -->
-        <div class="container">
-        <div class="row">
-        <div class="col-xs-6 col-xs-offset-3 text-center">
-        <div>
+        </div>
+        <div class="getcenter thebg">
             {block:Posts}
             {block:Text}
-                    <div>
+                    <div style="padding:50px 50px" class="text-left postbg">
                         {block:Title}
-                            <h3><a href="{Permalink}">{Title}</a></h3>
+                            <h2><a href="{Permalink}">{Title}</a></h2>
                         {/block:Title}{Body}
                     </div>
             {/block:Text}
             {block:Photo}
-                    <div>
+                    <div class="thebg">
                         <img src="{PhotoURL-500}" alt="{PhotoAlt}"/>
 
                         {block:Caption}
-                            <div class="caption">{Caption}</div>
+                            <div style="padding:50px 50px" class="caption">{Caption}</div>
                         {/block:Caption}
                     </div>
             {/block:Photo}{block:Panorama}
-                    <div >
+                    <div class="thebg">
                         {LinkOpenTag}
                             <img src="{PhotoURL-Panorama}" alt="{PhotoAlt}"/>
                         {LinkCloseTag}{block:Caption}
@@ -56,17 +80,14 @@
                     </div>
             {/block:Panorama}
             {block:Photoset}
-                    <div>
+                    <div class="postbg" style="padding-top:50px; margin-top:50px">
                         {Photoset-500}{block:Caption}
-                            <div>{Caption}</div>
+                            <div class="text-left" style="padding:50px 50px">{Caption}</div>
                         {/block:Caption}
                     </div>
             {/block:Photoset}
             {/block:Posts}
         </div>
-        </div><!-- end col -->
-        </div><!-- end row -->
-        </div><!-- end container -->
         
         <p id="footer">
             {block:PreviousPage}
