--- a/tumblrv1.html
+++ b/tumblrv1.html
@@ -1,4 +1,5 @@
-d>
+<html>
+    <head>
         <title>{Title}</title>
         <link rel="shortcut icon" href="{Favicon}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
